
 * FTPHandler class has 3 new methods:
   on_incomplete_file_sent()
   on_incomplete_file_received()
   on_login()

 * Added a new package in pyftpdlib namespace: "contrib". Modules defined here:
   pyftpdlib.contrib.handlers.py
   pyftpdlib.contrib.authorizers.py

 * AbstractedFS class has 3 new methods: 
   get_user_by_uid()
   get_group_by_gid()
   readlink()

Minor API changes since 0.5.2

 * FTPHandler renamed attributes:
   data_server -> _dtp_acceptor
   current_type -> _current_type
   restart_position -> _restart_position
   quit_pending -> _quit_pending
   af -> _af

 * AbstractedFS.rnfr attribute moved to FTPHandler._rnfr.


Version: 0.5.2 - Date: 2009-09-14
---------------------------------

Enhancements:

 * Issue #103: added unix_daemon.py script.

 * Issue #108: a new ThrottledDTPHandler class has been added for limiting the
   speed of downloads and uploads.

Bugfixes:

 * Issue #100: fixed a race condition in FTPHandler constructor which could
   throw an exception in case of connection bashing (DoS).  (thanks Bram Neijt)

 * Issue #102: FTPServer.close_all() now removes any unfired delayed call left
   behind to prevent potential memory leaks.

 * Issue #104: fixed a bug in FTPServer.handle_accept() where socket.accept()
   could return None instead of a valid address causing the server to crash.
   (OS X only, reported by Wentao Han)

 * Issue #104: an unhandled EPIPE exception might be thrown by asyncore.recv()
   when dealing with ill-behaved clients on OS X . (reported by Wentao Han)

 * Issue #105: ECONNABORTED might be thrown by socket.accept() on FreeBSD
   causing the server to crash.

 * Issue #109: an unhandled EBADF exception might be thrown when using poll() on
   OS X and FreeBSD.

 * Issue #111: the license used was not MIT as stated in source files.

 * Issue #112: fixed a MDTM related test case failure occurring on 64 bit OSes.

 * Issue #113: fixed unix_ftp.py which was treating anonymous as a normal user.
